	tracks.

	BUGFIX: fixed bug that caused gtkpod to hang when activating
	duplicate detection without having the list of duplicates
	displayed (must have been around ever since duplicate
	detection was introduced...)

	BUGFIX: gain tags written by mp3gain were never read
	correctly. Normalization using mp3gain was therefore
	impossible. Didn't anyone ever use that feature?!

	NEW FEATURE: registering playcounts when tracks are played on
	the local machine is now possible (actually it was already
	possible in V0.80, but now the README explains how to do it).

	IMPROVEMENT: Added "Time Created" support to special sorttab,
	track display and iTunesDB. (Before only "modified" and
	"played" were supported.)

	IMPROVEMENT: All information stored in the iTunesDB about
	tracks is read and written, even if the information itself is
	not used by gtkpod itself.

	IMPROVEMENT: Added new track information fields: iPod_Path,
	creation time, soundcheck, samplerate, "BPM"

	IMPROVEMENT: Volume normalizing: when importing mp3 the replay
	gain is read and the soundcheck field set accordingly. Use
	the "soundcheck" feature of the iPod to have the volume
	normalized during playback.
	If no replay gain tag is set, use the "Normalize" as usual to
	have mp3gain write a replay gain tag.

gtkpod V0.80-2
	BUGFIX: gtkpod would crash right after startup if the info
	window was open when stopping gtkpod the previous time.

	BUGFIX: Fixed free space display: the digits were right, the
	unit was wrong (B instead of kB, kB instead of MB, MB instead
	of GB...).

	PATCH: gtkpod will compile with GTK V2.0 (V0.80 needed GTK
	V2.4)

	PATCH: gtkpod should compile under Fedora without patch

	PATCH: reverted to old-style check of id3tag-lib as id3tag.pc
	is not included with the id3tag distribution by default
	
gtkpod V0.80
	NEW FEATURE: Added support for WAV audio files

	NEW FEATURE: Added support for bookmarkable AAC files (.m4b
	files). Thanks to D.L. Sharp. More information is available at